fix ui overlap;

--- a/app/src/ui/page_task/statical_assistor_popup/conditionpanel/style.less
+++ b/app/src/ui/page_task/statical_assistor_popup/conditionpanel/style.less
@@ -1,6 +1,8 @@
 .conditionPanel{
 	float: left;
 	width: 100%;
+	position:relative;
+	z-index:10;
 
 
 	.line{
