--- a/app/src/ui/page_task/statical_assistor_popup/style.less
+++ b/app/src/ui/page_task/statical_assistor_popup/style.less
@@ -10,10 +10,6 @@
 
 	.line{
 		width: 100%;
-
-		.expressSearchHint{
-		/*display:none;*/
-		}
 	}
 
 	.trees{
@@ -25,11 +21,11 @@
 		.datatree{
 			float:left;
 			width: 50%;
-
 		    height: 100%;
 		    overflow: scroll;
 		    border-top: solid transparent 141px;
 		    margin-top: -141px;
+		    z-index:1;
 		}
 	}
 
